HW12/E-4.4.100-Zipf/wdir_msg/compile.err

Zipf.java:62: error: cannot find symbol
        Array.sort(text);
        ^
  symbol:   variable Array
  location: class Zipf
Zipf.java:66: error: cannot find symbol
            System.out.printf("%10d %s\n", text.freq, text.key);
                                               ^
  symbol:   variable freq
  location: variable text of type Pair[]
Zipf.java:66: error: cannot find symbol
            System.out.printf("%10d %s\n", text.freq, text.key);
                                                          ^
  symbol:   variable key
  location: variable text of type Pair[]
3 errors


